--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       influxdb:
         condition: service_healthy
       redis:
-        condition: service_healthy
+        condition: service_started
   redis:
     image: redis:alpine
     ports:
