--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -3,8 +3,8 @@ FROM --platform=arm64 python:3.11-buster
 WORKDIR /app
 
 COPY ./app /app
-COPY requirments.txt .
-RUN pip install --default-timeout=100 -r requirments.txt
+COPY requirements.txt .
+RUN pip install --default-timeout=100 -r requirements.txt
 
 CMD ["python", "main.py"]
 
