--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,12 +1,17 @@
-FROM --platform=linux/arm64 python:3.11-slim
+# Use the official lightweight Python image
+FROM python:3.11-slim
 
-# Install Rust
-RUN apt-get update && apt-get install -y curl && \
-    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+# Install required dependencies
+RUN apt-get update && \
+    apt-get install -y gcc g++ make curl && \
+    curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Set environment variables for Rust
 ENV PATH="/root/.cargo/bin:${PATH}"
 
+# Set the working directory
 WORKDIR /app
 
 # Copy application files
@@ -16,4 +21,5 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --upgrade pip && pip install --default-timeout=150 -r requirements.txt
 
+# Command to run the application
 CMD ["python", "main.py"]
