--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,29 +1,35 @@
-# Use the official lightweight Python image
-FROM python:3.11-slim
+# Stage 1: Build stage for dependencies
+FROM python:3.11-slim AS builder
 
-# Install required dependencies/Including Rust Wheel builder
-RUN apt-get update && \
-    apt-get install -y gcc g++ make curl && \
+# Install required build tools (GCC, g++, make) and Rust for building aiosnmp
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc g++ make curl && \
     curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set environment variables for Rust
 ENV PATH="/root/.cargo/bin:${PATH}"
 
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Copy req.
+# Copy and install Python dependencies
 COPY requirements.txt .
-# Install Python dependencies
-RUN pip install --upgrade pip && pip install --default-timeout=150 --no-cache-dir -r requirements.txt
-# Copy application
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Stage 2: Final stage - slimmer image
+FROM python:3.11-slim
+
+# Set working directory
+WORKDIR /app
+
+# Copy installed dependencies from builder stage
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Copy the application code
 COPY ./app /app
-
-
-
-
 
 # Command to run the application
 CMD ["python", "main.py"]
