System Info In Web App

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - data_collection
     volumes:
       - ./web/app:/app
+      - ./device_info:/app/device_info
     environment:
       - INFLUXDB_URL=http://influxdb:8086
       - REDIS_URL=redis://redis:6379
