Basic Alerting UI - Needs Search Feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - REDIS_URL=redis://redis:6379
     env_file:
       - ./config/auth.env
+      - ./config/influxdb.env
 
 volumes:
   influxdb_data:
