--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-buster
+FROM python:3.11-bookworm
 
 WORKDIR /app
 
@@ -9,6 +9,7 @@ COPY ./app /app
 
 # Install Python dependencies
 RUN pip install --upgrade pip && pip install --default-timeout=150 --no-cache-dir -r requirements.txt
+
 
 # Expose the port FastAPI will run on
 EXPOSE 8000
