--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,55 @@ services:
       timeout: 5s
       retries: 10
     restart: always
+  
+  redis:
+    image: redis
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+  
+  nginx:
+    image: nginx:1.27.2
+    ports:
+      - "8081:8081"  # Custom HTTP port
+      - "443:443"  # Custom HTTPS port
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certs:/etc/nginx/certs  # Volume for SSL certificates
+      - ./web/app/static:/app/static  # Mount the static files for Nginx
+    depends_on:
+      - webapp
+      
+  webapp:
+    build: ./web
+    privileged: true
+    restart: always
+    depends_on:
+      - influxdb
+      - redis
+      - data_collection
+    volumes:
+      - ./logs:/var/log/app 
+      - ./web/app:/app # Mount the local directory for easier development
+      - ./device_info:/device_info
+      - ./app_data:/app_data 
+      - ./profiles:/profiles # Profiling results
+      - ./certs:/etc/nginx/certs  # Share certificates with NGINX
+    environment:
+      - LOG_FILE=/var/log/app/web.log
+      - INFLUXDB_URL=http://influxdb:8086
+      - REDIS_URL=redis://redis:6379
+    env_file:
+      - ./config/auth.env
+      - ./config/influxdb.env
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   data_collection:
     build: ./data
@@ -25,14 +74,6 @@ services:
       - ./data/app:/app # Mount the local directory for easier
     privileged: true
     restart: always
-
-    # Uncomment the following lines to run the container in privileged mode (Used for profiling)
-    # security_opt:
-    #   - apparmor=unconfined  # Disable AppArmor restrictions
-    # stop_grace_period: 30s
-    # cap_add:
-    #   - SYS_PTRACE  # Allow ptrace operations
-
     environment:
       - LOG_FILE=/var/log/app/data.log
       - INFLUXDB_URL=http://influxdb:8086
@@ -49,44 +90,6 @@ services:
           condition: service_healthy
       redis:
           condition: service_healthy
-
-  redis:
-    image: redis
-    restart: always
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-
-  webapp:
-    build: ./web
-    privileged: true
-    restart: always
-    ports:
-      - "8000:8000"
-    depends_on:
-      - influxdb
-      - redis
-      - data_collection
-    volumes:
-      - ./logs:/var/log/app 
-      - ./web/app:/app
-      - ./device_info:/device_info
-      - ./app_data:/app_data
-      - ./profiles:/profiles
-    environment:
-      - LOG_FILE=/var/log/app/web.log
-      - INFLUXDB_URL=http://influxdb:8086
-      - REDIS_URL=redis://redis:6379
-    env_file:
-      - ./config/auth.env
-      - ./config/influxdb.env
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "5"
 
 volumes:
   influxdb_data:
