--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       - "8081:8081"  # Custom HTTP port
       - "443:443"  # Custom HTTPS port
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/nginx/certs  # Volume for SSL certificates
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./etc/certs:/etc/nginx/certs  # Volume for SSL certificates
       - ./web/app/static:/app/static  # Mount the static files for Nginx
     depends_on:
       - webapp
@@ -46,12 +46,14 @@ services:
       - redis
       - data_collection
     volumes:
-      - ./logs:/var/log/app 
+      - ./etc/logs:/var/log/app # Log files
+      - ./etc/profiles:/profiles # Profiling results 
+      - ./etc/device_info:/device_info # Device information
+      - ./etc/app_data:/app_data
+      - ./etc/certs:/etc/nginx/certs  # Share certificates with NGINX
+
       - ./web/app:/app # Mount the local directory for easier development
-      - ./device_info:/device_info
-      - ./app_data:/app_data 
-      - ./profiles:/profiles # Profiling results
-      - ./certs:/etc/nginx/certs  # Share certificates with NGINX
+      
     environment:
       - LOG_FILE=/var/log/app/web.log
       - INFLUXDB_URL=http://influxdb:8086
@@ -68,9 +70,9 @@ services:
   data_collection:
     build: ./data
     volumes:
-      - ./logs:/var/log/app 
-      - ./device_info:/device_info
-      - ./profiles:/profiles
+      - ./etc/logs:/var/log/app # Log files
+      - ./etc/device_info:/device_info # Device information
+      - ./etc/profiles:/profiles # Profiling results 
       - ./data/app:/app # Mount the local directory for easier
     privileged: true
     restart: always
@@ -93,6 +95,3 @@ services:
 
 volumes:
   influxdb_data:
-  logs:
-    driver: local
-  profiles:
