--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   
   nginx:
     image: nginx:1.27.2
+    restart: always
     ports:
       - "8081:8081"  # Custom HTTP port
       - "443:443"  # Custom HTTPS port
