--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ aioping==0.4.0
 influxdb_client==1.44.0
 redis[hiredis]==5.0.7
 RPI.GPIO==0.7.1
-aiohttp==3.10.5
+aiohttp==3.10.11
 aiocsv==1.3.2
 aiologger==0.7.0
 aiofiles==24.1.0
@@ -32,3 +32,6 @@ aiosnmp==0.7.2
 
 # Certificate handling
 certifi==2024.7.4
+
+# AWS and cloud services
+awsiotsdk==1.22.0
