--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,6 @@ Adafruit-Blinka==8.45.2
 adafruit-circuitpython-busdevice==5.2.9
 adafruit-circuitpython-ina260==1.3.15
 adafruit-circuitpython-register==1.9.18
-Adafruit-PlatformDetect==3.71.0
-Adafruit-PureIO==1.1.11
 smbus2==0.4.3
 aioping==0.4.0
 
@@ -31,8 +29,8 @@ aiofiles==24.1.0
 aiosnmp==0.7.2
 
 # Certificate handling
-certifi==2024.7.4
 pexpect==4.9.0
 
 # AWS and cloud services
 awsiotsdk==1.22.0
+boto3==1.35.73
