--- a/data/app/utils/json/default_config.json
+++ b/data/app/utils/json/default_config.json
@@ -4,10 +4,7 @@
       "system_id": null,
       "agency": "Valorence",
       "product": "DPM",
-      "version": "1.0",
-      "ntp_server": "time.google.com",
-      "syslog_server": "44.223.77.239",
-      "emails": ["landon.bell@valorence.com", "landon@covertlawenforcement.com"]
+      "firmware": "1.0"
     },
     "relays": {
       "relay1": {
@@ -19,11 +16,12 @@
         "schedule": false,
         "rules": {
           "1": {
-            "field": "watts",
+            "field": "volts",
             "condition": "<",
             "value": 3,
             "actions": [
-              {"type": "log", "message": "Router Watts below threshold"}
+              {"type": "aws", "message": "Router Volts below threshold"},
+              {"type": "log", "message": "Router Volts below threshold"}
             ]
           }
         }
@@ -104,7 +102,7 @@
     "validation": {
       "allowed_fields": ["volts", "amps", "watts"],
       "allowed_conditions": [">", "<", ">=", "<=", "==", "!="],
-      "allowed_actions": ["log", "email", "mqtt", "toggle_relay", "pulse_relay"],
+      "allowed_actions": ["log", "aws", "relay_on", "relay_off", "pulse_relay"],
       "time_format": "HH:MM"
     }
 }
