--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,10 @@ services:
       - redis
       - data_collection
     logging:
-      driver: "none"
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     restart: on-failure
     privileged: true # Required for GPIO control
 
@@ -76,7 +79,10 @@ services:
       redis:
           condition: service_healthy
     logging:
-      driver: "none"
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     restart: on-failure
     privileged: true # Required for GPIO control
 
